# omni-g

./: .editorconfig  .env.docker.example  .env.example  .env.services.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI BI Platform Architecture & Business.md  CONTRIBUTING.md  development-instructions.md  docker-compose.test.yml  omni-g.excalidraw  package.json  prerequisites.md  run-steps.md  techstack.md
.github/: .copilot-instructions.md  copilot-instructions.md
services/processor/: Dockerfile  README.md  pyproject.toml
services/processor/src/briefing/: scheduler.py  script_generator.py  storage.py  tts_synthesizer.py  url_signer.py
services/processor/src/dedup/: __init__.py  deduplicator.py
services/processor/src/graph/: persistence.py  schema.py
services/processor/src/graphrag/: community.py  indexer.py  summarizer.py
services/processor/src/kafka/: __init__.py  consumer.py
services/processor/src/llm/: __init__.py  extractor.py  prompts.py
services/processor/src/models/: __init__.py  stix.py
services/processor/src/processor/: alert_publisher.py  config.py  main.py  pipeline.py  stage_publisher.py
services/processor/src/resolution/: models.py  resolver.py
services/processor/tests/: conftest.py  test_alert_publisher.py  test_briefing_preflight.py  test_briefing_scheduler.py  test_briefing_script_generator.py  test_briefing_storage.py  test_consumer.py  test_dedup.py  test_extractor.py  test_graph.py  test_graphrag.py  test_health.py  test_models.py  test_pipeline.py  test_resolver.py  test_tts_synthesizer.py  test_validate.py
(+102 files in other folders)
